20210730:
  * added soft:lib.dnnl

202107026:
  * added latest PyTorchVision varations up to 0.10. as asked by users
    (package:lib-python-torchvision)
  * added latest PyTorch varations up to 1.9.0 as asked by users
    (package:lib-python-torch)

20210723:
  * added docker:test-ck to test CK functionality, workflows and components
    (to be extended) - we plan to use it to gradually substitute travis CI 
    with GitHub actions

20210720:
  * added ML_MODEL_ROOT env to ML model detection and installation scripts
  * added CK_ENV_DATASET_ROOT env to ImageNet and COCO datasets

20210717:
  * added script:process-model to process common paramaters
    of different ML models

20210712:
  * added "add bench.mlperf.system" and improved MLPerf docs

20210710:
  * added Paretor frontier filter demo
  * added improved MLPerf dashboard configuration

20210706:
  * added mlcube
  * started working on a community version of the MLPerf inference submission system

20210628:
  * added latest tags to the package:lib-tensorflow-source

20210626:
  * added wfe:result template for the new CK dashboard
  * added result.cfg to configure new CK dashboards:
    * demo.mlperf.explore-threads
    * demo.mlperf.inference
    * demo.mlperf.mobilenets
    * demo.request.asplos18
  * added demo of results for new CK dashboards:
    * demo.mlperf.inference
    * demo.mlperf.mobilenets.all
    * demo.request.asplos18

20210611:
  * removing unneeded entries

20210602:
  * removed platform.* (except platform.init) because it's available in repo:ck-crowdtuning-platforms

20210601:
  * major clean up of testing of all Docker images

20210521:
  * regular update of stable components

20210418:
  * removed modules (they are now in the CK default repo: 
    https://github.com/ctuning/ck/tree/master/ck/repo/module

20210416:
  * [gfursin] extended module:package to ask a user to select a variation 
    for a given package when there are multiple versions available.

20210403: