@@ -25,6 +25,7 @@
       "PACKAGE_WGET": "YES"
     }
   },
+  "need_cpu_info": "yes",
   "end_full_path": {
     "linux": "cmake-$<<CMAKE_VERSION_MMR>>$-Linux-x86_64/bin/cmake",
     "macos": "cmake-$<<CMAKE_VERSION_MMR>>$-Darwin-x86_64/CMake.app/Contents/bin/cmake",
@@ -105,6 +106,18 @@
       },
       "extra_tags": [
         "v3.18"
+      ],
+      "on_by_default": "no"
+    },
+    "v3.21.1": {
+      "extra_env": {
+        "CMAKE_VERSION_MM": "3.21.1",
+        "CMAKE_VERSION_MMR": "3.21.1",
+        "CMAKE_AARCH64": "YES",
+        "CMAKE_GITHUB_HOST": "YES"
+      },
+      "extra_tags": [
+        "v3.21"
       ],
       "on_by_default": "yes"
     }
